--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -14,3 +14,4 @@
 @import "user_box";
 @import "forms";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap'); //Sora
+@import "feed_box"
