--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -13,4 +13,5 @@
 @import "chat_box";
 @import "user_box";
 @import "forms";
+@import "payment";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap'); //Sora
