--- a/app/assets/stylesheets/components/user_box.scss
+++ b/app/assets/stylesheets/components/user_box.scss
@@ -56,6 +56,7 @@
   justify-content: center;
   width: 100%;
   background-color: red;
+  text-decoration: none;
  p{
   color: white;
   padding: 10px 0 0 10px;
@@ -63,6 +64,6 @@
  }
  i{
   color: white;
-  padding: 12px 0 0 10px;
+  padding: 14px 0 0 10px;
  }
 }
