--- a/app/views/app/index.html.erb
+++ b/app/views/app/index.html.erb
@@ -2,11 +2,11 @@
   <div class="title">
     <h3>Preciso de ajuda com...</h3>
   </div>
-  <div class="row ">
+  <div class="row centralize">
     <% @app.each do |ap| %>
-    <div class="col-lg-4 col-md-6 col-sm-12 mt-3" id="center">
+    <div class="col-lg-4 col-md-4 col-sm-6 mt-3" id="center">
       <div class="card-category">
-        <%= link_to category_app_issues_path(app_id: ap.id) do %>
+        <%= link_to category_app_issues_path(app_id: ap.id), class:"stretched-link" do %>
         <p><%= ap.name %></p>
         <% end %>
       </div>
