--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,5 +1,5 @@
-<h2>Chatrooms disponíveis:</h2>
 <div class="container">
+  <h1 style="color: white; border-bottom: 1px solid white">Conversas</h1>
   <div class="row">
     <% @chatrooms.each do |chatroom| %>
       <div class="col-lg-3 col-md-4 col-sm-12 mt-3">
@@ -7,14 +7,14 @@
           <div class="item-chatroom">
             <div class="list-container">
               <div class="card_idx_header">
-                <h2 class= "title"><%= chatroom.grandparent.name %> </h2>
+                <h2 class= "title-grandparent"><%= chatroom.grandparent.name %> </h2>
                 <% if current_user == chatroom.grandchild %>
                   <span class="my_chat">Meu</span>
                 <% end %>
               </div>
               <p class= "category-name"><%="#{chatroom.category.name} | #{chatroom.app.name}" %></p>
               <p class= "category-issue"><%="#{chatroom.issue.name}" %></p>
-              <%= link_to  join_chat_path(chatroom: chatroom.id), data: { 'turbo-method' => :put }, class:"btn_chat" do %>
+              <%= link_to  join_chat_path(chatroom: chatroom.id), data: { 'turbo-method' => :put }, class:"btn_chat stretched-link" do %>
                 <div class="btn_go_chat">
                   <p>Atender chamado</p>
                   <i class="fa-solid fa-arrow-right"></i>
