--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -14,5 +14,6 @@
 @import "user_box";
 @import "forms";
 @import "payment";
+@import "table";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500&display=swap'); //Sora
 @import "feed_box";
