como funciona e contato conteudos

--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,5 +1,15 @@
-<div class="container">
-  <h1 class="table-style">Contatos</h1>
-  <p style="color:white">Gabriel lindo maravilhoso</p>
-  <p style="color:white">Cel: (11) 2345-678</p>
+<div class="container about-style"">
+  <h1 class="title-style" style="text-align: center">O time maravilhoso criador desse site incrível</h1>
+  <div class="contacts">
+    <div class="contact-box">
+      <br>
+      <%= image_tag "gabe.jpeg" %>
+      <p>Gabriel Mathias 🤪</p>
+    </div>
+    <div class="contact-box">
+      <br>
+      <%= image_tag "ale.jpeg" %>
+      <p>Alessandra Labelle 🌻</p>
+    </div>
+  </div>
 </div>
