--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -3,6 +3,10 @@
   border-bottom: 1px solid white;
 }
 
+.contact-style {
+  color: white;
+}
+
 .about-style {
   color: white;
   text-align: justify;
