--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container about-style"">
-  <h1 class="title-style" style="text-align: center">O time maravilhoso criador desse site incrível</h1>
-  <div class="contacts">
+  <h1 class="contact-style" style="text-align: center">O time maravilhoso criador desse site incrível</h1>
+  <div class="contacts mt-5">
     <div class="contact-box">
       <br>
       <%= image_tag "gabe.jpeg" %>
@@ -10,6 +10,16 @@
       <br>
       <%= image_tag "ale.jpeg" %>
       <p>Alessandra Labelle 🌻</p>
+    </div>
+    <div class="contact-box">
+      <br>
+      <%= image_tag "deia.jpeg" %>
+      <p>Andréa Vieira 😶‍🌫️</p>
+    </div>
+    <div class="contact-box">
+      <br>
+      <%= image_tag "gio.jpeg" %>
+      <p>Giovanni Cabral 🧐</p>
     </div>
   </div>
 </div>
