--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -3,22 +3,22 @@
   <div class="contacts mt-5">
     <div class="contact-box">
       <br>
-      <%= image_tag "gabe.jpeg" %>
+      <%= image_tag "gabe.jpg" %>
       <p>Gabriel Mathias 🤪</p>
     </div>
     <div class="contact-box">
       <br>
-      <%= image_tag "ale.jpeg" %>
+      <%= image_tag "ale.jpg" %>
       <p>Alessandra Labelle 🌻</p>
     </div>
     <div class="contact-box">
       <br>
-      <%= image_tag "deia.jpeg" %>
+      <%= image_tag "deia.jpg" %>
       <p>Andréa Vieira 😶‍🌫️</p>
     </div>
     <div class="contact-box">
       <br>
-      <%= image_tag "gio.jpeg" %>
+      <%= image_tag "gio.jpg" %>
       <p>Giovanni Cabral 🧐</p>
     </div>
   </div>
